objects/DAZNLanguageConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Language__c</fullName>
        <label>Default Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>DAZNLanguageConfiguration</label>
</CustomObject>